# web_p

./: .gitignore  CLAUDE.md  README.md  build_exe.py  generate_docs.py  main.py  pyproject.toml  run.py  setup.py
src/website_analyzer/: __init__.py
src/website_analyzer/core/: __init__.py  analyzer.py  downloader.py  error_handler.py  file_manager.py
src/website_analyzer/gui/: __init__.py  analysis_tab.py  browse_tab.py  download_tab.py  main_window.py
tests/: __init__.py  test_downloader.py
